[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/CharacterAssets/PlayerModel.png" type="Texture" id=1]
[ext_resource path="res://Player/PlayerColorShader.tres" type="Material" id=2]
[ext_resource path="res://Themes/UnselectedButtonTheme.tres" type="StyleBox" id=3]
[ext_resource path="res://Themes/MainButtonFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/ItemAssets/Shoes.png" type="Texture" id=5]
[ext_resource path="res://Assets/WeaponAssets/Item__00.png" type="Texture" id=6]
[ext_resource path="res://Assets/WeaponAssets/Item_34.png" type="Texture" id=7]
[ext_resource path="res://UI/StatsUI/StatsUI.gd" type="Script" id=8]
[ext_resource path="res://Themes/BigStatsFont.tres" type="DynamicFont" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.435294, 0.392157, 0.345098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.886275, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 50.0
expand_margin_right = 50.0
expand_margin_top = 50.0
expand_margin_bottom = 50.0

[node name="StatsUI" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.794
margin_top = -100.801
margin_right = 229.206
margin_bottom = 121.199
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 458.0
margin_bottom = 217.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 453.0
margin_bottom = 212.0

[node name="AttributeContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 212.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )

[node name="AttVbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 123.0
margin_bottom = 210.0

[node name="StrHbox" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox"]
margin_right = 121.0
margin_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox/StrHbox"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
texture = ExtResource( 6 )
stretch_mode = 1

[node name="StrLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox/StrHbox"]
margin_left = 68.0
margin_top = 16.0
margin_right = 110.0
margin_bottom = 47.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = ExtResource( 9 )
text = "00"
align = 1
valign = 1

[node name="ConHbox" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox"]
margin_top = 68.0
margin_right = 121.0
margin_bottom = 132.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox/ConHbox"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
texture = ExtResource( 7 )
stretch_mode = 1

[node name="ConLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox/ConHbox"]
margin_left = 68.0
margin_top = 16.0
margin_right = 110.0
margin_bottom = 47.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = ExtResource( 9 )
text = "00"
align = 1
valign = 1

[node name="DexHbox" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox"]
margin_top = 136.0
margin_right = 121.0
margin_bottom = 200.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox/DexHbox"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
texture = ExtResource( 5 )
stretch_mode = 1

[node name="DexLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer/AttVbox/DexHbox"]
margin_left = 68.0
margin_top = 16.0
margin_right = 110.0
margin_bottom = 47.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = ExtResource( 9 )
text = "00"
align = 1
valign = 1

[node name="Space" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 159.0
margin_bottom = 212.0
rect_min_size = Vector2( 30, 0 )

[node name="PortraitContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 288.0
margin_bottom = 212.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )

[node name="PortraitVbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/PortraitContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 123.0
margin_bottom = 210.0

[node name="Sprite" type="Sprite" parent="PanelContainer/MarginContainer/HBoxContainer/PortraitContainer/PortraitVbox"]
material = ExtResource( 2 )
position = Vector2( 60, 90 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
hframes = 5

[node name="HeadSprite" type="Sprite" parent="PanelContainer/MarginContainer/HBoxContainer/PortraitContainer/PortraitVbox/Sprite"]
use_parent_material = true
hframes = 5
frame = 1

[node name="ChestSprite" type="Sprite" parent="PanelContainer/MarginContainer/HBoxContainer/PortraitContainer/PortraitVbox/Sprite"]
use_parent_material = true
hframes = 5
frame = 1

[node name="LegSprite" type="Sprite" parent="PanelContainer/MarginContainer/HBoxContainer/PortraitContainer/PortraitVbox/Sprite"]
use_parent_material = true
hframes = 5
frame = 1

[node name="Space2" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 292.0
margin_right = 322.0
margin_bottom = 212.0
rect_min_size = Vector2( 30, 0 )

[node name="AttributeContainer3" type="PanelContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 326.0
margin_right = 453.0
margin_bottom = 212.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )

[node name="StatVbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3"]
margin_left = 2.0
margin_top = 2.0
margin_right = 125.0
margin_bottom = 210.0

[node name="Space" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox"]
margin_right = 123.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="ArmorBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox"]
margin_top = 14.0
margin_right = 123.0
margin_bottom = 46.0

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox"]
margin_right = 10.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox"]
margin_left = 14.0
margin_right = 46.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox"]
margin_left = 50.0
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 20, 0 )

[node name="ArmorLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox"]
margin_left = 74.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 29.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = ExtResource( 4 )
text = "00"
align = 1
valign = 1

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox"]
margin_left = 113.0
margin_right = 123.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="ArmorBox2" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox"]
margin_top = 50.0
margin_right = 123.0
margin_bottom = 82.0

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox2"]
margin_right = 10.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox2"]
margin_left = 14.0
margin_right = 46.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox2"]
margin_left = 50.0
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 20, 0 )

[node name="ArmorLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox2"]
margin_left = 74.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 29.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = ExtResource( 4 )
text = "00"
align = 1
valign = 1

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox2"]
margin_left = 113.0
margin_right = 123.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="ArmorBox3" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox"]
margin_top = 86.0
margin_right = 123.0
margin_bottom = 118.0

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox3"]
margin_right = 10.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox3"]
margin_left = 14.0
margin_right = 46.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox3"]
margin_left = 50.0
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 20, 0 )

[node name="ArmorLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox3"]
margin_left = 74.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 29.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = ExtResource( 4 )
text = "00"
align = 1
valign = 1

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox3"]
margin_left = 113.0
margin_right = 123.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="ArmorBox4" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox"]
margin_top = 122.0
margin_right = 123.0
margin_bottom = 154.0

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox4"]
margin_right = 10.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox4"]
margin_left = 14.0
margin_right = 46.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox4"]
margin_left = 50.0
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 20, 0 )

[node name="ArmorLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox4"]
margin_left = 74.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 29.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = ExtResource( 4 )
text = "00"
align = 1
valign = 1

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox4"]
margin_left = 113.0
margin_right = 123.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="ArmorBox5" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox"]
margin_top = 158.0
margin_right = 123.0
margin_bottom = 190.0

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox5"]
margin_right = 10.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox5"]
margin_left = 14.0
margin_right = 46.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox5"]
margin_left = 50.0
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 20, 0 )

[node name="ArmorLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox5"]
margin_left = 74.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 29.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = ExtResource( 4 )
text = "00"
align = 1
valign = 1

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/AttributeContainer3/StatVbox/ArmorBox5"]
margin_left = 113.0
margin_right = 123.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )
